--- a/common/po/zh_CN.po
+++ b/common/po/zh_CN.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-12-03 12:24-0500\n"
+"POT-Creation-Date: 2015-12-07 00:44-0500\n"
 "PO-Revision-Date: 2014-11-18 06:55-0500\n"
 "Last-Translator: leahliu <lliu@redhat.com>\n"
 "Language-Team: Chinese (Simplified, China)\n"
@@ -128,8 +128,8 @@ msgid "must be between {min} and {max}"
 msgstr "必须在 {min} 和 {max} 之间"
 
 #: common/src/main/java/org/candlepin/common/validation/CandlepinMessageInterpolator.java:89
-msgid "may have unsafe html content"
-msgstr "可能包含不安全 html 内容"
+msgid "may have unsafe HTML content"
+msgstr "可能包含不安全 HTML 内容"
 
 #: common/src/main/java/org/candlepin/common/validation/CandlepinMessageInterpolator.java:91
 #, java-format
@@ -169,7 +169,7 @@ msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:95
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusTrendReport.java:115
-msgid "The entitlement sku on which to filter"
+msgid "The entitlement SKU on which to filter"
 msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:100
@@ -181,14 +181,14 @@ msgstr ""
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusTrendReport.java:129
 msgid ""
 "Filter on subscriptions which have management enabled set to this value "
-"(boolean)"
+"(Boolean)"
 msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:113
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:91
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:92
 msgid ""
 "Enables/disables custom report result functionality via attribute filtering "
-"(boolean)."
+"(Boolean)."
 msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:116
@@ -196,12 +196,12 @@ msgid "Include status reasons in results"
 msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:120
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:95
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:96
 msgid "Includes the specified attribute in the result JSON"
 msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:126
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:102
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:103
 msgid "Excludes the specified attribute in the result JSON"
 msgstr ""
 
@@ -209,16 +209,16 @@ msgstr ""
 msgid "Lists the status of each consumer over a date range"
 msgstr ""
 
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:71
-msgid "The number of hours to filter on (used indepent of date range)."
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:72
+msgid "The number of hours to filter on (used independent of date range)."
 msgstr ""
 
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:77
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:78
 #, java-format
 msgid "The start date to filter on (used with {0})."
 msgstr ""
 
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:84
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:85
 #, java-format
 msgid "The end date to filter on (used with {0})"
 msgstr ""
@@ -333,8 +333,10 @@ msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/filter/OAuthFilter.java:109
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/filter/OAuthFilter.java:122
+#: server/src/main/java/org/candlepin/auth/OAuth.java:119
+#: server/src/main/java/org/candlepin/auth/OAuth.java:156
 msgid "Invalid OAuth unit or secret"
-msgstr ""
+msgstr "无效 OAuth 单元或者 secret"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -357,8 +359,9 @@ msgid "message is null"
 msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/filter/OAuthFilter.java:172
+#: server/src/main/java/org/candlepin/auth/OAuth.java:161
 msgid "Error getting OAuth unit key"
-msgstr ""
+msgstr "获取 OAuth 单元密钥出错"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -543,7 +546,7 @@ msgstr "{0} 删除了虚拟机 id {1} "
 
 #: server/src/main/java/org/candlepin/audit/EventAdapterImpl.java:165
 #, java-format
-msgid "{0} updated the rules in the databse to version {1}"
+msgid "{0} updated the rules in the database to version {1}"
 msgstr "{0} 将数据库中的规则更新至版本 {1}"
 
 #: server/src/main/java/org/candlepin/audit/EventAdapterImpl.java:167
@@ -574,15 +577,6 @@ msgstr "联系用户服务出错"
 #, java-format
 msgid "Unit {0} has been deleted"
 msgstr "已删除单元 {0}"
-
-#: server/src/main/java/org/candlepin/auth/OAuth.java:119
-#: server/src/main/java/org/candlepin/auth/OAuth.java:156
-msgid "Invalid oauth unit or secret"
-msgstr "无效 oauth 单元或者 secret"
-
-#: server/src/main/java/org/candlepin/auth/OAuth.java:161
-msgid "Error getting oauth unit key"
-msgstr "获取 oauth 单元密钥出错"
 
 #: server/src/main/java/org/candlepin/controller/CandlepinPoolManager.java:220
 #: server/src/main/java/org/candlepin/resource/util/ResolverUtil.java:52
@@ -685,7 +679,7 @@ msgstr "属性 ''{0}'' 必须是一个长值。"
 
 #: server/src/main/java/org/candlepin/model/ProductCurator.java:331
 #, java-format
-msgid "The attribute ''{0}'' must be a boolean value."
+msgid "The attribute ''{0}'' must be a Boolean value."
 msgstr "属性 ''{0}'' 必须是一个布尔值。"
 
 #: server/src/main/java/org/candlepin/model/RulesCurator.java:104
@@ -1271,11 +1265,11 @@ msgstr "json \"{0}\" 中的虚拟机 ID 与路径虚拟机  ID \"{1}\" 匹配"
 
 #: server/src/main/java/org/candlepin/resource/GuestIdResource.java:242
 #, java-format
-msgid "Guest with uuid {0} could not be found."
-msgstr "无法找到 uuid {0} 的虚拟机。"
+msgid "Guest with UUID {0} could not be found."
+msgstr "无法找到 UUID {0} 的虚拟机。"
 
 #: server/src/main/java/org/candlepin/resource/HypervisorResource.java:121
-msgid "Host to guest mapping was not provided for hypervisor checkin."
+msgid "Host to guest mapping was not provided for hypervisor check-in."
 msgstr ""
 
 #: server/src/main/java/org/candlepin/resource/HypervisorResource.java:155
@@ -1393,15 +1387,15 @@ msgstr "读取导出归档出错"
 # keys, author xhuang
 #: server/src/main/java/org/candlepin/resource/OwnerResource.java:1388
 #, java-format
-msgid "Problem generating ueber cert for owner {0}"
-msgstr "为所有者 {0} 生成 ueber 证书出现问题"
+msgid "Problem generating uber cert for owner {0}"
+msgstr "为所有者 {0} 生成 uber 证书出现问题"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author xhuang
 #: server/src/main/java/org/candlepin/resource/OwnerResource.java:1416
 #, java-format
-msgid "ueber certificate for owner {0} was not found. Please generate one."
-msgstr "没有找到为所有者 {0} 的 ueber 证书，请生成一个。"
+msgid "uber certificate for owner {0} was not found. Please generate one."
+msgstr "没有找到为所有者 {0} 的 uber 证书，请生成一个。"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -1614,11 +1608,9 @@ msgstr "没有找到 id 为 {1} 的 {0}"
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See knowledge database https://access.redhat.com/"
+"knowledge/node/129003 for more information."
 msgstr ""
-"证书 {0} 的内容组过多。较新的客户端可解决这个问题。详情请查看知识库 https://"
-"access.redhat.com/knowledge/node/129003。"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author xhuang
