--- a/common/po/fr.po
+++ b/common/po/fr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-12-03 12:24-0500\n"
+"POT-Creation-Date: 2015-12-07 00:44-0500\n"
 "PO-Revision-Date: 2015-02-18 03:18-0500\n"
 "Last-Translator: Eliovir <eliovir@gmail.com>\n"
 "Language-Team: French\n"
@@ -138,8 +138,8 @@ msgid "must be between {min} and {max}"
 msgstr "doit être compris entre {min} et {max}"
 
 #: common/src/main/java/org/candlepin/common/validation/CandlepinMessageInterpolator.java:89
-msgid "may have unsafe html content"
-msgstr "peut avoir un contenu html non sécurisé"
+msgid "may have unsafe HTML content"
+msgstr "peut avoir un contenu HTML non sécurisé"
 
 #: common/src/main/java/org/candlepin/common/validation/CandlepinMessageInterpolator.java:91
 #, java-format
@@ -180,7 +180,7 @@ msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:95
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusTrendReport.java:115
-msgid "The entitlement sku on which to filter"
+msgid "The entitlement SKU on which to filter"
 msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:100
@@ -192,14 +192,14 @@ msgstr ""
 #: gutterball/src/main/java/org/candlepin/gutterball/report/StatusTrendReport.java:129
 msgid ""
 "Filter on subscriptions which have management enabled set to this value "
-"(boolean)"
+"(Boolean)"
 msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:113
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:91
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:92
 msgid ""
 "Enables/disables custom report result functionality via attribute filtering "
-"(boolean)."
+"(Boolean)."
 msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:116
@@ -207,12 +207,12 @@ msgid "Include status reasons in results"
 msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:120
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:95
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:96
 msgid "Includes the specified attribute in the result JSON"
 msgstr ""
 
 #: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerStatusReport.java:126
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:102
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:103
 msgid "Excludes the specified attribute in the result JSON"
 msgstr ""
 
@@ -220,18 +220,18 @@ msgstr ""
 msgid "Lists the status of each consumer over a date range"
 msgstr "Répertorier le statut de chaque consommateur sur une certaine période"
 
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:71
-msgid "The number of hours to filter on (used indepent of date range)."
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:72
+msgid "The number of hours to filter on (used independent of date range)."
 msgstr ""
 "Nombre d''heures pendant lesquelles effectuer le filtrage (utilisé "
 "indépendamment de la période)."
 
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:77
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:78
 #, java-format
 msgid "The start date to filter on (used with {0})."
 msgstr "Date de début du filtrage (utilisé avec {0})."
 
-#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:84
+#: gutterball/src/main/java/org/candlepin/gutterball/report/ConsumerTrendReport.java:85
 #, java-format
 msgid "The end date to filter on (used with {0})"
 msgstr "Date de fin du filtrage (utilisé avec {0})"
@@ -346,6 +346,8 @@ msgstr "Aucun identifiant fourni"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/filter/OAuthFilter.java:109
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/filter/OAuthFilter.java:122
+#: server/src/main/java/org/candlepin/auth/OAuth.java:119
+#: server/src/main/java/org/candlepin/auth/OAuth.java:156
 msgid "Invalid OAuth unit or secret"
 msgstr "Unité ou secret OAuth non valide"
 
@@ -370,6 +372,7 @@ msgid "message is null"
 msgstr "le message est nul"
 
 #: gutterball/src/main/java/org/candlepin/gutterball/resteasy/filter/OAuthFilter.java:172
+#: server/src/main/java/org/candlepin/auth/OAuth.java:161
 msgid "Error getting OAuth unit key"
 msgstr "Erreur lors de l''obtention de la clé d''unité OAuth"
 
@@ -556,7 +559,7 @@ msgstr "{0} a supprimé l''ID d''invité {1}"
 
 #: server/src/main/java/org/candlepin/audit/EventAdapterImpl.java:165
 #, java-format
-msgid "{0} updated the rules in the databse to version {1}"
+msgid "{0} updated the rules in the database to version {1}"
 msgstr "{0} a mis à jour les règles de la base de données vers la version {1}"
 
 #: server/src/main/java/org/candlepin/audit/EventAdapterImpl.java:167
@@ -587,15 +590,6 @@ msgstr "Erreur lors du contact au service utilisateur"
 #, java-format
 msgid "Unit {0} has been deleted"
 msgstr "L''unité {0} a été supprimée"
-
-#: server/src/main/java/org/candlepin/auth/OAuth.java:119
-#: server/src/main/java/org/candlepin/auth/OAuth.java:156
-msgid "Invalid oauth unit or secret"
-msgstr "Unité ou secret OAuth non valide"
-
-#: server/src/main/java/org/candlepin/auth/OAuth.java:161
-msgid "Error getting oauth unit key"
-msgstr "Erreur lors de l''obtention de la clé d''unité OAuth"
 
 #: server/src/main/java/org/candlepin/controller/CandlepinPoolManager.java:220
 #: server/src/main/java/org/candlepin/resource/util/ResolverUtil.java:52
@@ -702,7 +696,7 @@ msgstr "L''attribut « {0} » doit être une valeur longue."
 
 #: server/src/main/java/org/candlepin/model/ProductCurator.java:331
 #, java-format
-msgid "The attribute ''{0}'' must be a boolean value."
+msgid "The attribute ''{0}'' must be a Boolean value."
 msgstr "L''attribut « {0} » doit être une valeur booléenne."
 
 #: server/src/main/java/org/candlepin/model/RulesCurator.java:104
@@ -1341,11 +1335,11 @@ msgstr ""
 
 #: server/src/main/java/org/candlepin/resource/GuestIdResource.java:242
 #, java-format
-msgid "Guest with uuid {0} could not be found."
+msgid "Guest with UUID {0} could not be found."
 msgstr "L’invité avec l’UUID {0} est introuvable."
 
 #: server/src/main/java/org/candlepin/resource/HypervisorResource.java:121
-msgid "Host to guest mapping was not provided for hypervisor checkin."
+msgid "Host to guest mapping was not provided for hypervisor check-in."
 msgstr ""
 
 #: server/src/main/java/org/candlepin/resource/HypervisorResource.java:155
@@ -1467,17 +1461,17 @@ msgstr "Erreur lors de la lecture de l''archive d''export"
 # keys, author samfreemanz
 #: server/src/main/java/org/candlepin/resource/OwnerResource.java:1388
 #, java-format
-msgid "Problem generating ueber cert for owner {0}"
+msgid "Problem generating uber cert for owner {0}"
 msgstr ""
-"Problème lors de la génération du certificat ueber pour le propriétaire {0}"
+"Problème lors de la génération du certificat uber pour le propriétaire {0}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
 #: server/src/main/java/org/candlepin/resource/OwnerResource.java:1416
 #, java-format
-msgid "ueber certificate for owner {0} was not found. Please generate one."
+msgid "uber certificate for owner {0} was not found. Please generate one."
 msgstr ""
-"Le certificat ueber pour le propriétaire {0} est introuvable. Veuillez en "
+"Le certificat uber pour le propriétaire {0} est introuvable. Veuillez en "
 "générer un."
 
 # translation auto-copied from project Candlepin, version master, document
@@ -1696,12 +1690,9 @@ msgstr "{0} avec l''ID {1} est introuvable."
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See knowledge database https://access.redhat.com/"
+"knowledge/node/129003 for more information."
 msgstr ""
-"Trop d''ensembles de contenus pour le certificat {0}. Un client plus récent "
-"peut être disponible pour résoudre ce problème. Voir kbase https://access."
-"redhat.com/knowledge/node/129003 pour obtenir davantage d''informations."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
